task-05/main.css
@font-face {
    font-family: devil-breeze;
    src: url("assets/fonts/devil-breeze.ttf")
}
@font-face {
    font-family: bebas-nue;
    src: url("assets/fonts/bebas-nue.ttf");
}

body {
    margin: 0;
    min-height: 100vh;
    min-width:100vw;
}

body#index {background-image: url("assets/backdrop.png");}
body#shop {background-color: #0a1b37;}

a {
    text-decoration: none;
    color: black;
}

.navbar {
    display: flex;
    position:sticky;
    background-color:#0e1425ad;
    width: 100vw;
    height: 70px;
    align-items: center;
}

.navbar-logo {
    width: 28%;
    height: auto;
    margin-left: 15px;
}

.navbar-social {
    position: fixed;
    left: 89%;
    display: flex;
    flex-direction: row;
    gap: 40px;
}

.navbar-social-items {
    width: 100%;
    height: auto;
}

.splashtextbig {
    color:white;
    font-family: devil-breeze;
    text-align: center;
    font-size: 76px;
    letter-spacing: 0.1em;
}
.splashtextsmall {
    color:white;
    font-family: devil-breeze;
    text-align: center;
    font-size: 32px;
    letter-spacing: 0.1em;
}

.splash-container {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-top: 65vh;
}

.explore-shop-text {
    font-family: bebas-nue;
    font-size: 30px;
}

.explore-shop {
    display: flex;
    align-items: center;
    justify-content: right;
    

    height: 50px;
    width: 210px;
    border-radius: 7px;
    background-color: #2BDAE1;
}

.grid-container {
    justify-content: space-around;
    gap: 20px;
    display: flex;
    flex-wrap: wrap;
    margin-top: 40px;
    margin-left: 28vw;
    margin-right: 28vw;
}

.grid-item-container {
    position: relative;
    width:170px;
    height:257px;
    background-color: #0b0b219b;
    border-radius: 10px;
}

.grid-footer {
    position: absolute;
    background-color: #3345AB;
    bottom: 0px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    height: 15px;
    width:170px;
}

.grid-item-content-container {
    position: relative;
    width:170px;
    height:242px;
}

.grid-item-img{
    position:absolute;
    width:90%;
    height:auto;
    align-self: center;
    justify-self: center;
}

.grid-item-text {
    position: absolute;
    font-family: bebas-nue;
    bottom: 35px;
    font-size: 22px;
    margin-left: 20px;
    margin-right:25px;
}

.grid-item-text-price {
    position: absolute;
    bottom: 3px;
    font-family: bebas-nue;
    font-size: 20px;
    margin-left: 20px;
}

